Initial scaffold for Itero Power-Up (frontend + backend)

--- a/frontend/src/manifest.json
+++ b/frontend/src/manifest.json
@@ -14,6 +14,6 @@
     "icon": {
       "url": "/public/icon.png"
     },
-    "iframeConnectorUrl": "https://your-netlify-site.netlify.app"
+    "iframeConnectorUrl": "https://itero-powerup.netlify.app/"
   }
   
