--- a/netlify.toml
+++ b/netlify.toml
@@ -1,2 +1,8 @@
 [build]
-publish = "frontend"
+  publish = "frontend"
+  command = ""
+
+[[redirects]]
+  from = "/*"
+  to = "/index.html"
+  status = 200
