Refactor: Move files to public folder and update paths

--- a/frontend/manifest.json
+++ b/frontend/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "Itero Motivation Engine",
-  "description": "Minimal test version",
+  "description": "Minimal working setup",
   "permissions": ["read", "write"],
   "capabilities": {
     "board-buttons": [
