Add root build script to trigger frontend build on Netlify

--- a/package.json
+++ b/package.json
@@ -1,20 +1,8 @@
 {
-  "name": "itero-frontend",
-  "version": "1.0.0",
-  "private": true,
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "date-fns": "^4.1.0",
-    "recharts": "^2.15.3"
-  },
-  "devDependencies": {
-    "vite": "^5.0.0",
-    "@vitejs/plugin-react": "^4.0.0"
+    "name": "itero-root",
+    "version": "1.0.0",
+    "private": true,
+    "scripts": {
+      "build": "cd frontend && npm install && npm run build"
+    }
   }
-}
