Fix Power-Up routing and iframe loading for Trello integration

--- a/manifest.json
+++ b/manifest.json
@@ -14,5 +14,5 @@
   "icon": {
     "url": "https://itero-powerup.netlify.app/icon.png"
   },
-  "iframeConnectorUrl": "https://itero-powerup.netlify.app"
+  "iframeConnectorUrl": "https://itero-powerup.netlify.app/#/"
 }
