Move manifest.json to public folder for Trello to access

--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -3,12 +3,7 @@
   "description": "Minimal working setup",
   "permissions": ["read", "write"],
   "capabilities": {
-    "card-buttons": [
-      {
-        "text": "Complete Task 🎯",
-        "callback": "onCompleteTask"
-      }
-    ]
+    "card-buttons": []
   },
   "author": "Farnoud Amiri",
   "icon": {
