--- a/netlify.toml
+++ b/netlify.toml
@@ -8,6 +8,11 @@
   status = 200
 
 [[redirects]]
+  from = "/manifest.json"
+  to = "/manifest.json"
+  status = 200
+
+[[redirects]]
   from = "/*"
   to = "/index.html"
   status = 200
