--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "recharts": "^2.15.3"
   },
   "devDependencies": {
+    "@rollup/plugin-replace": "^6.0.2",
     "@vitejs/plugin-react": "^4.0.0",
     "vite": "^5.0.0"
   }
