--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,12 +1,25 @@
+alembic==1.15.2
+blinker==1.9.0
+certifi==2025.8.3
+charset-normalizer==3.4.3
+click==8.2.0
 Flask==2.3.3
-Flask-Cors==5.0.1
-Flask-SQLAlchemy==3.1.1
+flask-cors==5.0.1
 Flask-Migrate==4.1.0
+Flask-SQLAlchemy==3.1.1
+gunicorn==21.2.0
+idna==3.10
+itsdangerous==2.2.0
+Jinja2==3.1.6
+Mako==1.3.10
+MarkupSafe==3.0.2
+packaging==25.0
+psycopg2-binary==2.9.10
 PyJWT==2.8.0
 PyMySQL==1.1.1
-gunicorn==21.2.0
-pymysql
-python-dotenv
-psycopg2-binary
-
-
+python-dotenv==1.1.0
+requests==2.32.5
+SQLAlchemy==2.0.41
+typing_extensions==4.13.2
+urllib3==2.5.0
+Werkzeug==3.1.3
