--- a/netlify.toml
+++ b/netlify.toml
@@ -58,8 +58,9 @@
       object-src 'none';
       frame-ancestors https://trello.com https://*.trello.com;
 
-      script-src 'self' 'unsafe-inline' 'unsafe-eval' https://p.trellocdn.com;
+      script-src 'self' https://p.trellocdn.com;
       script-src-elem 'self' https://p.trellocdn.com;
+
 
       style-src 'self' 'unsafe-inline';
       img-src 'self' data: blob: https:;
